--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "bully",
+    "name": "Constructive Connections",
     "description": "This hides negative and mean comments to reduce cyberbullying.",
     "version": "1.0",
     "content_scripts": [
@@ -26,6 +26,6 @@
         "activeTab"
     ],
     "icons": {
-        "128": "128.png"
+        "128": "icon128.png"
     }
 }
